# SimpleBot-master

./: .gitignore  Cargo.toml  README.md  migrate.sql  sqlite.db-shm  sqlite.db-wal
.github/workflows/: rust.yml
simple_bot/: Cargo.toml
simple_bot/src/: config.rs  main.rs
simple_bot/src/model/: div.rs  mod.rs
simple_bot/src/plugin/internal/: information.rs  mod.rs
simple_bot/src/plugin/internal/information/: div.rs
simple_bot/src/plugin/internal/picture/: ascii2d.rs  pixiv_proxy.rs  saucenao.rs  search.rs
simple_bot/src/plugin/internal/video/: bilibili.rs
simple_bot_macros/: Cargo.toml
